crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__prefix_operator-3.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"not some_function()\")"
---
syntax_tree:
0..19 Root
|0..19 Block
||0..19 Statement
|||0..19 Expression
||||0..19 Value
|||||0..19 PrefixNot
||||||KeywordNot `not`
||||||Whitespace ` `
||||||4..19 PostfixOperation
|||||||4..17 Value
||||||||4..17 Ident
|||||||||Identifier `some_function`
|||||||17..19 PostfixOperator
||||||||17..19 ArgumentList
|||||||||ParensOpen `(`
|||||||||ParensClose `)`

diagnostics:
