crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__prefix_operator.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"not true\")"
---
syntax_tree:
0..8 Root
|0..8 Block
||0..8 Statement
|||0..8 Expression
||||0..8 Value
|||||0..8 PrefixNot
||||||KeywordNot `not`
||||||Whitespace ` `
||||||4..8 Value
|||||||4..8 BooleanLiteral
||||||||KeywordTrue `true`

diagnostics:
