crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__reject_extra_input.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"1 1 1 1 11 1\")"
---
syntax_tree:
0..12 Root
|0..12 Block
||0..2 Statement
|||0..2 Expression
||||0..2 Value
|||||0..2 NumberLiteral
||||||NumberLiteral `1`
||||||Whitespace ` `
||ERROR Expected newline
||2..4 Statement
|||2..4 Expression
||||2..4 Value
|||||2..4 NumberLiteral
||||||NumberLiteral `1`
||||||Whitespace ` `
||ERROR Expected newline
||4..6 Statement
|||4..6 Expression
||||4..6 Value
|||||4..6 NumberLiteral
||||||NumberLiteral `1`
||||||Whitespace ` `
||ERROR Expected newline
||6..8 Statement
|||6..8 Expression
||||6..8 Value
|||||6..8 NumberLiteral
||||||NumberLiteral `1`
||||||Whitespace ` `
||ERROR Expected newline
||8..11 Statement
|||8..11 Expression
||||8..11 Value
|||||8..11 NumberLiteral
||||||NumberLiteral `11`
||||||Whitespace ` `
||ERROR Expected newline
||11..12 Statement
|||11..12 Expression
||||11..12 Value
|||||11..12 NumberLiteral
||||||NumberLiteral `1`

diagnostics:
Error: Expected newline
   ╭─[ main:1:3 ]
   │
 1 │ 1 1 1 1 11 1
   │   │ 
   │   ╰─ Here
───╯

Error: Expected newline
   ╭─[ main:1:5 ]
   │
 1 │ 1 1 1 1 11 1
   │     │ 
   │     ╰─ Here
───╯

Error: Expected newline
   ╭─[ main:1:7 ]
   │
 1 │ 1 1 1 1 11 1
   │       │ 
   │       ╰─ Here
───╯

Error: Expected newline
   ╭─[ main:1:9 ]
   │
 1 │ 1 1 1 1 11 1
   │         │ 
   │         ╰─ Here
───╯

Error: Expected newline
   ╭─[ main:1:12 ]
   │
 1 │ 1 1 1 1 11 1
   │            │ 
   │            ╰─ Here
───╯
