crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__return-2.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify(\"fn foo() { return 15 * 15 }\")"
---
syntax_tree:
0..27 Root
|0..27 File
||0..27 Item
|||0..27 ItemKind
||||0..27 FunctionDefinition
|||||KeywordFn `fn`
|||||Whitespace ` `
|||||Identifier `foo`
|||||6..9 ParameterList
||||||ParensOpen `(`
||||||ParensClose `)`
||||||Whitespace ` `
|||||BraceOpen `{`
|||||Whitespace ` `
|||||11..26 Block
||||||11..26 Statement
|||||||11..26 Return
||||||||KeywordReturn `return`
||||||||Whitespace ` `
||||||||18..26 Expression
|||||||||18..26 BinaryOperation
||||||||||18..21 Expression
|||||||||||18..21 Value
||||||||||||18..21 NumberLiteral
|||||||||||||NumberLiteral `15`
|||||||||||||Whitespace ` `
||||||||||Times `*`
||||||||||Whitespace ` `
||||||||||23..26 Expression
|||||||||||23..26 Value
||||||||||||23..26 NumberLiteral
|||||||||||||NumberLiteral `15`
|||||||||||||Whitespace ` `
|||||BraceClose `}`

diagnostics:
