crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__return.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify(\"fn foo() { return }\")"
---
syntax_tree:
0..19 Root
|0..19 File
||0..19 Item
|||0..19 ItemKind
||||0..19 FunctionDefinition
|||||KeywordFn `fn`
|||||Whitespace ` `
|||||Identifier `foo`
|||||6..9 ParameterList
||||||ParensOpen `(`
||||||ParensClose `)`
||||||Whitespace ` `
|||||BraceOpen `{`
|||||Whitespace ` `
|||||11..18 Block
||||||11..18 Statement
|||||||11..18 Return
||||||||KeywordReturn `return`
||||||||Whitespace ` `
|||||BraceClose `}`

diagnostics:
